# TRACE

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/trace/: cli.py
src/trace/core/: detector.py  patterns.py  types.py
src/trace/visualization/: graph.py  report.py
tests/test_trace/: test_detector.py  test_patterns.py
