[metadata]
name = trace-ml
version = attr: trace.__version__
description = Type Resolution And Call-graph Extractor for ML Research
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    typer
    rich
    networkx
    plotly
    jinja2
    joblib

[options.packages.find]
where = src
